# callisto-engine

./: CMakeLists.txt  README.md
include/: camera.h  celestialBody.h  dependencies.h  math.h  planet.h  render.h  scene.h  star.h  system.h
shaders/: default.frag  default.vert
src/: camera.cpp  celestialBody.cpp  main.cpp  math.cpp  planet.cpp  rendering.cpp  scene.cpp  star.cpp
